docs: switch web-sandbox frontend recipe to java -jar, not bootRun
bootJar + bootRun in one ./gradlew invocation trips Gradle's
implicit-dependency validation (bootRun has no declared dependency
on :frontend:copyFrontend). Running the built jar directly with
java --enable-preview sidesteps the Gradle task graph entirely and
is simpler; note the --enable-preview requirement (classes compiled
with Java 21 preview features) and the local-db/ cwd gotcha.